# MarsOS

./: Build.sh  CMakeLists.txt  Makefile  README.md
Arch/: CMakeLists.txt  Makefile
Arch/X86/: CMakeLists.txt  Linker.ld  Linker.lds
Arch/X86/Boot/: Boot.S  Boot.c  BootMain.c  CMakeLists.txt
Boot/: Boot.S
Drivers/VGA/: VGA.h
Includes/Boot/: MultiBoot.h
Includes/Drivers/VGA/: Color.h  Typs.h  VGA.h
Kernel/: CMakeLists.txt  Kernel.c  Main.c
